<resources>
    <!-- Login -->
    <string name="login_title">Pico Botella</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Registrarse</string>

    <!-- Home Fragment -->
    <string name="app_name">Pico Botella</string>
    <string name="bottle_iv">BottleImageView</string>
    <string name="txt_presioname">Presióname</string>
    <string name="start_btn_description">BotonGiro</string>
    <string name="cerrar">Cerrar</string>

    <!-- Toolbar -->
    <string name="toolbar_rate">Califica la App</string>
    <string name="toolbar_volume">Control Sonido</string>
    <string name="toolbar_instructions">Instrucciones</string>
    <string name="toolbar_add">Agregar retos</string>
    <string name="toolbar_share">Compartir la app</string>
    <string name="toolbar_logout">Cerrar sesión</string>

    <!-- Instrucciones Fragment -->
    <string name="como_title">¿Cómo se juega?</string>
    <string name="reglas_title">Reglas del juego</string>
    <string name="challenge_title">Retos</string>
    <string name="como_text">
        Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan
        el botón parpadeante para girar la botella.\n
        El jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario
        abandona el juego.
    </string>
    <string name="quien_title">¿Quién gana?</string>
    <string name="quien_text">Gana el último jugador que no abandone el juego.</string>

    <!-- Challenges Fragment -->
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_add_placeholder">Escriba el reto</string>
    <string name="dialog_add_text">Agregar reto</string>
    <string name="dialog_edit_text">Editar reto</string>
    <string name="dialog_delete_text">¿Deseas eliminar el siguiente reto?:</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="addchallengebutton">AddChallengeButton</string>

    <!-- Challenges Item -->
    <string name="deletechallengebutton">DeleteChallengeButton</string>
    <string name="editchallengebutton">EditChallengeButton</string>
    <string name="fireimage">FireImage</string>

    <!-- Challenges Toolbar -->
    <string name="backbutton">BackButton</string>

</resources>