<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.spin_bottle.view.fragment.InstruccionesFragment"
        android:background="@color/gray">

        <TextView
            android:id="@+id/tvComoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/como_title"
            android:theme="@style/instrucciones_title"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tvComoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/como_text"
            android:theme="@style/instrucciones_text"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvComoTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tvQuienTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quien_title"
            android:theme="@style/instrucciones_title"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvComoText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tvQuienText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quien_text"
            android:theme="@style/instrucciones_text"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvQuienTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>