<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wood_background_light">

        <!-- Aqui va la toolbar -->

        <RelativeLayout
            android:id="@+id/custom_toolbar"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"

            android:background="@drawable/toolbar_background"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btn_rate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icono_star"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/toolbar_rate">

                </ImageButton>

                <ImageButton
                    android:id="@+id/btn_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icono_volume_on"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/toolbar_volume">

                </ImageButton>

                <ImageButton
                    android:id="@+id/btn_instructions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icono_instructions"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/toolbar_instructions">

                </ImageButton>

                <ImageButton
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icono_add"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/toolbar_add">

                </ImageButton>

                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icono_share"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/toolbar_share">

                </ImageButton>

            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/bottle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/bottle_iv"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.44"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.7"
            app:srcCompat="@drawable/bottle" />

        <TextView
            android:id="@+id/textv_presioname"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/protest_strike_regular"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/txt_presioname"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <ImageView
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/startbtndescription"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textv_presioname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottle"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.2"
            app:srcCompat="@drawable/circle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>