<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvChallenge"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:backgroundTint="@color/white"
            card_view:cardCornerRadius="10dp"
            android:elevation="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/downTo46pd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="46dp" />

                <View
                    android:id="@+id/line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    app:layout_constraintTop_toBottomOf="@id/downTo46pd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


                <ImageView
                    android:id="@+id/item_challenge_fire_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_fire"
                    android:padding="10dp"
                    android:contentDescription="@string/fireimage"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/delete_challenge_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_trash"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/deletechallengebutton"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


                <ImageButton
                    android:id="@+id/edit_challenge_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_pencil"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/editchallengebutton"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/delete_challenge_button" />

                <TextView
                    android:id="@+id/challenge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/downTo46pd"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>